--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^0.5.7+3
+  flutter_form_builder: ^3.11.1
+  flutter_highlight: ^0.6.0
+  json_annotation: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,6 +36,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  # flutter pub run build_runner build
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
