--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_form_builder: ^3.11.1
   flutter_highlight: ^0.6.0
   json_annotation: ^3.0.0
+  flutter_slidable: ^0.5.4
 
 
   # The following adds the Cupertino Icons font to your application.
