--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,6 +20,8 @@ jobs:
           echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
 
+      - uses: seanmiddleditch/gha-setup-ninja@master
+
       - uses: actions/setup-java@v1
         with:
           java-version: '8.x'
