--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: seanmiddleditch/gha-setup-ninja@master
+
       - uses: actions/setup-java@v1
         with:
           java-version: '8.x'
