--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,6 +21,8 @@ jobs:
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
         shell: bash
 
+      - uses: seanmiddleditch/gha-setup-ninja@master
+
       - uses: actions/setup-java@v1
         with:
           java-version: '8.x'
