--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,8 +20,6 @@ jobs:
           echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
 
-      - uses: seanmiddleditch/gha-setup-ninja@master
-
       - uses: actions/setup-java@v1
         with:
           java-version: '8.x'
@@ -35,6 +33,13 @@ jobs:
           flutter upgrade
           flutter config --enable-linux-desktop
           flutter pub get
+
+      - name: Patch for linux build
+        run: |
+          flutter doctor
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+          flutter doctor
 
       - name: Build linux
         run: |
